[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/godot_ovrmobile/example_scenes/ARVROriginWithHandTracking.gd" type="Script" id=1]
[ext_resource path="res://addons/godot_ovrmobile/example_scenes/left_hand_model.glb" type="PackedScene" id=2]
[ext_resource path="res://addons/godot_ovrmobile/example_scenes/right_hand_model.glb" type="PackedScene" id=3]

[node name="ARVROriginWithHandTracking" type="ARVROrigin"]
script = ExtResource( 1 )

[node name="ARVRCamera" type="ARVRCamera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.72656, 0 )

[node name="LeftHand" type="ARVRController" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.132544, 1.65044, -0.301362 )

[node name="left_hand_model" parent="LeftHand" instance=ExtResource( 2 )]

[node name="RightHand" type="ARVRController" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.346606, 1.72656, -0.4 )
controller_id = 2

[node name="right_hand_model" parent="RightHand" instance=ExtResource( 3 )]
[connection signal="button_pressed" from="LeftHand" to="." method="_on_LeftHand_pinch_pressed"]
[connection signal="button_pressed" from="RightHand" to="." method="_on_RightHand_pinch_pressed"]
